# reprepo

./: .gitignore  README.md
desktop/: .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: index.tsx  styles.scss
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/migrations/: README.md
desktop/src-tauri/migrations/2024-03-09-174222_create_auth/: up.sql
desktop/src-tauri/migrations/2024-03-09-191611_create_auth_account/: down.sql
desktop/src-tauri/migrations/2024-03-10-014851_create_users/: down.sql  up.sql
desktop/src-tauri/migrations/2024-03-10-014910_create_artist_profile/: down.sql  up.sql
desktop/src-tauri/migrations/2024-03-10-014910_create_repository/: up.sql
desktop/src-tauri/migrations/2024-03-10-020604_create_record/: up.sql
desktop/src-tauri/migrations/2024-03-10-022839_create_checkpoint/: down.sql  up.sql
desktop/src-tauri/migrations/2024-03-10-022843_create_media/: down.sql  up.sql
desktop/src-tauri/migrations/2024-03-10-022920_create_media_record/: down.sql  up.sql
desktop/src-tauri/migrations/2024-03-10-022927_create_media_checkpoint/: down.sql  up.sql
desktop/src-tauri/migrations/2024-03-10-132514_create_musician_repertoire/: down.sql  up.sql
desktop/src-tauri/migrations/2024-03-10-133132_create_musician_repertoire_record/: down.sql  up.sql
desktop/src-tauri/migrations/2024-04-03-013035_create_author_meta/: up.sql
desktop/src-tauri/migrations/2024-04-03-013115_create_composition_meta/: up.sql
desktop/src-tauri/migrations/2024-04-04-231732_record/: down.sql  up.sql
desktop/src-tauri/migrations/2024-04-04-235230_commit/: down.sql  up.sql
desktop/src-tauri/prompts/: author_composition_meta.txt
desktop/src-tauri/src/: main.rs  schema.rs  state.rs
desktop/src-tauri/src/commands/: ai.rs  auth.rs  author_meta.rs  commit.rs  composition_meta.rs  file.rs  mod.rs  record.rs  repository.rs  user.rs  utilities.rs
desktop/src-tauri/src/database/: connection.rs
desktop/src-tauri/src/layout/: menu.rs
desktop/src-tauri/src/libs/: calendar.rs  error.rs  event.rs  file.rs  locale.rs  mod.rs
desktop/src-tauri/src/models/: account.rs  artist_profile.rs  auth.rs  auth_account.rs  author_meta.rs  checkpoint.rs  commands.rs  commit.rs  composition_meta.rs  media.rs  media_checkpoint.rs  media_record.rs  mod.rs  musician_repertoire.rs  musician_repertoire_record.rs  record.rs  repository.rs  user.rs
desktop/src-tauri/src/services/: account.rs  artist_profile.rs  auth.rs  auth_account.rs  author_meta.rs  commit.rs  composition_meta.rs  file.rs  google_oauth.rs  mod.rs  record.rs  repository.rs  stronghold.rs  user.rs
desktop/src/declarations/: modules.d.ts  solid-quill.d.ts
desktop/src/hooks/: create-aws-file-fetcher.ts  create-cropper.ts
desktop/src/models/: account.model.ts  api.model.ts  artistProfile.model.ts  (+9 more)
server/api/: .gitignore  Cargo.toml
server/api/migrations/2024-03-09-012143_create_role/: down.sql  up.sql
server/api/migrations/2024-03-09-174222_create_auth/: down.sql  up.sql
server/api/migrations/2024-03-09-190114_create_account/: down.sql  up.sql
server/api/migrations/2024-03-09-191611_create_auth_account/: up.sql
server/api/migrations/2024-03-10-014851_create_user/: down.sql  up.sql
server/api/migrations/2024-03-10-014852_create_user_role/: up.sql
server/api/migrations/2024-03-10-014853_create_subscription/: up.sql
server/api/migrations/2024-03-10-014855_create_user_subscription/: down.sql  up.sql
server/api/migrations/2024-03-10-014856_create_teacher_student/: down.sql  up.sql
server/api/migrations/2024-03-10-014910_create_repository/: down.sql  up.sql
server/api/migrations/2024-04-03-013035_create_author_meta/: down.sql
server/api/migrations/2024-04-03-013115_create_composition_meta/: down.sql
server/api/migrations/2024-04-04-235230_commit/: up.sql
server/api/src/: main.rs  schema.rs  state.rs
server/api/src/controllers/: auth_controller.rs  user_controller.rs
server/api/src/data/: auth_data.rs  mod.rs  role_data.rs  user_data.rs  user_role_data.rs
server/api/src/libs/: error.rs  mod.rs
server/api/src/middleware/: auth_validator.rs  mod.rs
server/api/src/models/: auth.rs  role.rs  user.rs  user_role.rs
server/api/src/routes/: api_v1.rs  mod.rs
server/api/src/services/: auth_service.rs  user_service.rs
website/: README.md  package.json
(+154 files in other folders)
