[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "numeric"] }
dotenvy = "0.15"
chrono = "0.4.35"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rust-argon2 = "2.1.0"
oauth2 = { version = "5.0.0-alpha.2", features = ["reqwest"] }
url = "2.5.0"
reqwest = { version = "0.11.26", features = ["blocking"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
