[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "numeric", "r2d2"] }
dotenvy = "0.15"
chrono = "0.4.35"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rust-argon2 = "2.1.0"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
url = { version = "2.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
jsonwebtoken = "9.2.0"
webbrowser = "0.8.13"
base64 = "0.22.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.57"
image = "0.25.1"
fast_image_resize = "3.0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
