[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_22"] }
actix-web-httpauth = "0.8.1"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "numeric", "r2d2"] }
dotenvy = "0.15"
jsonwebtoken = "9.2.0"
tokio = { version = "1", features = ["full", "io-util"] }
thiserror = "1.0.57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = "0.4.35"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
rustls = "0.22"
rustls-pemfile = "2.1.2"